--- a/pages/students.html
+++ b/pages/students.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRUD</title>
-    <link rel="stylesheet" href="./css/teacher.min.css">
+    <link rel="stylesheet" href="../css/students.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -18,15 +18,17 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script type="module" defer src="js/const.js"></script>
-    <script type="module" defer src="js/main.js"></script>
+    <script type="module" defer src="../js/const.js"></script>
+    <script type="module" defer src="../js/students.js"></script>
   </head>
   <body>
     <header>
       <div class="headers-container container">
-        <img src="./images/school-logo.png" alt="">
+        <a href="../index.html">        
+          <img src="../images/school-logo.png" alt="">
+        </a>
         <div  class="d-flex gap-1 inputs">
-          <select class="form-select teacher-select" name="" id="">
+          <select class="form-select student-select" name="" id="">
             <option  value="">Default</option>
             <option  value="lastNmae-asc">FirstName (A-Z)</option>
             <option value="lastNmae-desc">FirstName (Z-A)</option>
@@ -36,18 +38,18 @@
             <option  value="true">Married</option>
             <option value="false">Single</option>
           </select>
-          <button data-bs-toggle="modal" data-bs-target="#teacher" class="btn add-btn btn-success">add</button>
+          <button data-bs-toggle="modal" data-bs-target="#student" class="btn add-btn btn-success">add</button>
         </div>
       </div>
     </header>
     <section id="hero">
       <div class="container">
-        <div class="modal fade" id="teacher">
-          <form novalidate class="teacher-form">
+        <div class="modal fade" id="student">
+          <form novalidate class="student-form">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h1 class="modal-title fs-5">Teacher data</h1>
+                <h1 class="modal-title fs-5">student data</h1>
                 <button type="submit" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
@@ -67,7 +69,12 @@
                     <div class="invalid-feedback">Please fill</div>
                   </div>
                   <div class="input-group mb-3">
-                    <input type="text" class="form-control" name="groups" placeholder="Groups:">
+                    <input type="number" class="form-control" name="degree" placeholder="Degree:">
+                    <div class="valid-feedback">Thanks for filling</div>
+                    <div class="invalid-feedback">Please fill</div>
+                  </div>
+                  <div class="input-group mb-3">
+                    <input type="text" class="form-control" name="rating" placeholder="Rating:">
                     <div class="valid-feedback">Thanks for filling</div>
                     <div class="invalid-feedback">Please fill</div>
                   </div>
@@ -102,10 +109,10 @@
                     <div class="invalid-feedback">Please fill</div>
                   </div>
                   <div class="form-check">
-                    <label class="form-check-label" for="isMarried">
-                      Is married ?
+                    <label class="form-check-label" for="isWork">
+                       is work?
                     </label>
-                    <input class="form-check-input" type="checkbox" id="isMarried" name="isMarried">
+                    <input class="form-check-input" type="checkbox" id="isWork" name="isWork">
                   </div>
                 </form>
               </div>
@@ -120,13 +127,12 @@
         </form>
         </div>
         <div class="searching">
-            <input type="text" placeholder="Searching teachers..." class="form-control search-input">
+            <input type="text" placeholder="Searching students..." class="form-control search-input">
             <ul class="pagination"></ul>
         </div>
-        <div class="teacher-cards">
+        <div class="student-cards">
         </div>
       </div>
     </section>
   </body>
 </html>
-
